[tool.poetry]
name = "labyrinth-game"
version = "0.1.0"
description = ""
authors = ["Arina <79160367+arinaat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

